// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Card Base element 1`] = `
<div
  className="MuiBox-root MuiBox-root-9 makeStyles-root-2"
>
  <button
    className="MuiButtonBase-root MuiCardActionArea-root makeStyles-actionArea-8"
    disabled={false}
    onBlur={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <img
      alt="Clonazepam 05 mg"
      className="MuiCardMedia-root makeStyles-media-3 MuiCardMedia-media MuiCardMedia-img"
      src="https://www.laboratoriochile.cl/wp-content//uploads/2015/11/Clonazepam_05MG_30C_BE_HD.jpg"
      title="Clonazepam 05 mg"
    />
    <div
      className="MuiCardContent-root makeStyles-content-5"
      onClick={[Function]}
    >
      <h2
        className="MuiTypography-root MuiTypography-h6 MuiTypography-colorTextPrimary MuiTypography-gutterBottom MuiTypography-alignCenter"
      >
        Clonazepam · 2 mg
      </h2>
      <div
        className="MuiBox-root MuiBox-root-10 makeStyles-box-4"
      >
        <div
          className="MuiChip-root MuiChip-sizeSmall"
          onKeyDown={[Function]}
          onKeyUp={[Function]}
        >
          <div
            className="MuiAvatar-root MuiAvatar-circle MuiChip-avatar MuiChip-avatarSmall"
          >
            <img
              alt="Bioequivalente"
              className="MuiAvatar-img"
              src="/static/images/avatar/1.jpg"
            />
          </div>
          <span
            className="MuiChip-label MuiChip-labelSmall"
          >
            BioE
          </span>
        </div>
        <div
          className="MuiChip-root MuiChip-sizeSmall"
          onKeyDown={[Function]}
          onKeyUp={[Function]}
        >
          <div
            className="MuiAvatar-root MuiAvatar-circle MuiChip-avatar MuiChip-avatarSmall"
          >
            <img
              alt="Receta retenida"
              className="MuiAvatar-img"
              src="/static/images/avatar/1.jpg"
            />
          </div>
          <span
            className="MuiChip-label MuiChip-labelSmall"
          >
            Receta retenida
          </span>
        </div>
      </div>
      <p
        className="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-gutterBottom MuiTypography-alignCenter"
      >
        Clonazepam · 2 mg · 30 comprimidos
      </p>
      <div
        className="MuiBox-root MuiBox-root-11"
      >
        <h2
          className="MuiTypography-root MuiTypography-h6 MuiTypography-colorPrimary MuiTypography-alignCenter"
        >
          $ 
          5025
        </h2>
        <h3
          className="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorPrimary MuiTypography-alignCenter"
        >
          $ 168 / comprimido
        </h3>
      </div>
    </div>
    <span
      className="MuiCardActionArea-focusHighlight"
    />
  </button>
  <div
    className="MuiCardActions-root makeStyles-actions-6 MuiCardActions-spacing"
    onClick={[Function]}
  >
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-button-7 MuiButton-containedPrimary"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        Agregar
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Card Editable Card 1`] = `
<div
  style={
    Object {
      "display": "flex",
    }
  }
>
  <div
    className="MuiBox-root MuiBox-root-19 makeStyles-root-12"
  >
    <button
      className="MuiButtonBase-root MuiCardActionArea-root makeStyles-actionArea-18"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <img
        alt="Clonazepam 05 mg"
        className="MuiCardMedia-root makeStyles-media-13 MuiCardMedia-media MuiCardMedia-img"
        src="https://www.laboratoriochile.cl/wp-content//uploads/2015/11/Clonazepam_05MG_30C_BE_HD.jpg"
        title="Clonazepam 05 mg"
      />
      <div
        className="MuiCardContent-root makeStyles-content-15"
        onClick={[Function]}
      >
        <h2
          className="MuiTypography-root MuiTypography-h6 MuiTypography-colorTextPrimary MuiTypography-gutterBottom MuiTypography-alignCenter"
        >
          Clonazepam · 2 mg
        </h2>
        <div
          className="MuiBox-root MuiBox-root-20 makeStyles-box-14"
        >
          <div
            className="MuiChip-root MuiChip-sizeSmall"
            onKeyDown={[Function]}
            onKeyUp={[Function]}
          >
            <div
              className="MuiAvatar-root MuiAvatar-circle MuiChip-avatar MuiChip-avatarSmall"
            >
              <img
                alt="Bioequivalente"
                className="MuiAvatar-img"
                src="/static/images/avatar/1.jpg"
              />
            </div>
            <span
              className="MuiChip-label MuiChip-labelSmall"
            >
              BioE
            </span>
          </div>
          <div
            className="MuiChip-root MuiChip-sizeSmall"
            onKeyDown={[Function]}
            onKeyUp={[Function]}
          >
            <div
              className="MuiAvatar-root MuiAvatar-circle MuiChip-avatar MuiChip-avatarSmall"
            >
              <img
                alt="Receta retenida"
                className="MuiAvatar-img"
                src="/static/images/avatar/1.jpg"
              />
            </div>
            <span
              className="MuiChip-label MuiChip-labelSmall"
            >
              Receta retenida
            </span>
          </div>
        </div>
        <p
          className="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-gutterBottom MuiTypography-alignCenter"
        >
          Clonazepam · 2 mg · 30 comprimidos
        </p>
        <div
          className="MuiBox-root MuiBox-root-21"
        >
          <h2
            className="MuiTypography-root MuiTypography-h6 MuiTypography-colorPrimary MuiTypography-alignCenter"
          >
            $ 
            5025
          </h2>
          <h3
            className="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorPrimary MuiTypography-alignCenter"
          >
            $ 168 / comprimido
          </h3>
        </div>
      </div>
      <span
        className="MuiCardActionArea-focusHighlight"
      />
    </button>
    <div
      className="MuiCardActions-root makeStyles-actions-16 MuiCardActions-spacing"
      onClick={[Function]}
    >
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-button-17 MuiButton-containedPrimary"
        disabled={false}
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          Agregar
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Card Editable Card Grid 1`] = `
<div
  style={
    Object {
      "display": "grid",
      "gap": "40px 10px",
      "gridTemplateColumns": "repeat(3, 1fr)",
      "gridTemplateRows": "repeat(3, 1fr)",
    }
  }
>
  <div
    className="MuiBox-root MuiBox-root-29 makeStyles-root-22"
  >
    <button
      className="MuiButtonBase-root MuiCardActionArea-root makeStyles-actionArea-28"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <img
        alt="Clonazepam 05 mg"
        className="MuiCardMedia-root makeStyles-media-23 MuiCardMedia-media MuiCardMedia-img"
        src="https://www.laboratoriochile.cl/wp-content//uploads/2015/11/Clonazepam_05MG_30C_BE_HD.jpg"
        title="Clonazepam 05 mg"
      />
      <div
        className="MuiCardContent-root makeStyles-content-25"
        onClick={[Function]}
      >
        <h2
          className="MuiTypography-root MuiTypography-h6 MuiTypography-colorTextPrimary MuiTypography-gutterBottom MuiTypography-alignCenter"
        >
          Clonazepam · 2 mg
        </h2>
        <div
          className="MuiBox-root MuiBox-root-30 makeStyles-box-24"
        >
          <div
            className="MuiChip-root MuiChip-sizeSmall"
            onKeyDown={[Function]}
            onKeyUp={[Function]}
          >
            <div
              className="MuiAvatar-root MuiAvatar-circle MuiChip-avatar MuiChip-avatarSmall"
            >
              <img
                alt="Bioequivalente"
                className="MuiAvatar-img"
                src="/static/images/avatar/1.jpg"
              />
            </div>
            <span
              className="MuiChip-label MuiChip-labelSmall"
            >
              BioE
            </span>
          </div>
          <div
            className="MuiChip-root MuiChip-sizeSmall"
            onKeyDown={[Function]}
            onKeyUp={[Function]}
          >
            <div
              className="MuiAvatar-root MuiAvatar-circle MuiChip-avatar MuiChip-avatarSmall"
            >
              <img
                alt="Receta retenida"
                className="MuiAvatar-img"
                src="/static/images/avatar/1.jpg"
              />
            </div>
            <span
              className="MuiChip-label MuiChip-labelSmall"
            >
              Receta retenida
            </span>
          </div>
        </div>
        <p
          className="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-gutterBottom MuiTypography-alignCenter"
        >
          Clonazepam · 2 mg · 30 comprimidos
        </p>
        <div
          className="MuiBox-root MuiBox-root-31"
        >
          <h2
            className="MuiTypography-root MuiTypography-h6 MuiTypography-colorPrimary MuiTypography-alignCenter"
          >
            $ 
            5025
          </h2>
          <h3
            className="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorPrimary MuiTypography-alignCenter"
          >
            $ 168 / comprimido
          </h3>
        </div>
      </div>
      <span
        className="MuiCardActionArea-focusHighlight"
      />
    </button>
    <div
      className="MuiCardActions-root makeStyles-actions-26 MuiCardActions-spacing"
      onClick={[Function]}
    >
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-button-27 MuiButton-containedPrimary"
        disabled={false}
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          Agregar
        </span>
      </button>
    </div>
  </div>
  <div
    className="MuiBox-root MuiBox-root-32 makeStyles-root-22"
  >
    <button
      className="MuiButtonBase-root MuiCardActionArea-root makeStyles-actionArea-28"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <img
        alt="Clonazepam 05 mg"
        className="MuiCardMedia-root makeStyles-media-23 MuiCardMedia-media MuiCardMedia-img"
        src="https://www.laboratoriochile.cl/wp-content//uploads/2015/11/Clonazepam_05MG_30C_BE_HD.jpg"
        title="Clonazepam 05 mg"
      />
      <div
        className="MuiCardContent-root makeStyles-content-25"
        onClick={[Function]}
      >
        <h2
          className="MuiTypography-root MuiTypography-h6 MuiTypography-colorTextPrimary MuiTypography-gutterBottom MuiTypography-alignCenter"
        >
          Clonazepam · 2 mg
        </h2>
        <div
          className="MuiBox-root MuiBox-root-33 makeStyles-box-24"
        >
          <div
            className="MuiChip-root MuiChip-sizeSmall"
            onKeyDown={[Function]}
            onKeyUp={[Function]}
          >
            <div
              className="MuiAvatar-root MuiAvatar-circle MuiChip-avatar MuiChip-avatarSmall"
            >
              <img
                alt="Bioequivalente"
                className="MuiAvatar-img"
                src="/static/images/avatar/1.jpg"
              />
            </div>
            <span
              className="MuiChip-label MuiChip-labelSmall"
            >
              BioE
            </span>
          </div>
          <div
            className="MuiChip-root MuiChip-sizeSmall"
            onKeyDown={[Function]}
            onKeyUp={[Function]}
          >
            <div
              className="MuiAvatar-root MuiAvatar-circle MuiChip-avatar MuiChip-avatarSmall"
            >
              <img
                alt="Receta retenida"
                className="MuiAvatar-img"
                src="/static/images/avatar/1.jpg"
              />
            </div>
            <span
              className="MuiChip-label MuiChip-labelSmall"
            >
              Receta retenida
            </span>
          </div>
        </div>
        <p
          className="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-gutterBottom MuiTypography-alignCenter"
        >
          Clonazepam · 2 mg · 30 comprimidos
        </p>
        <div
          className="MuiBox-root MuiBox-root-34"
        >
          <h2
            className="MuiTypography-root MuiTypography-h6 MuiTypography-colorPrimary MuiTypography-alignCenter"
          >
            $ 
            5025
          </h2>
          <h3
            className="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorPrimary MuiTypography-alignCenter"
          >
            $ 168 / comprimido
          </h3>
        </div>
      </div>
      <span
        className="MuiCardActionArea-focusHighlight"
      />
    </button>
    <div
      className="MuiCardActions-root makeStyles-actions-26 MuiCardActions-spacing"
      onClick={[Function]}
    >
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-button-27 MuiButton-containedPrimary"
        disabled={false}
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          Agregar
        </span>
      </button>
    </div>
  </div>
  <div
    className="MuiBox-root MuiBox-root-35 makeStyles-root-22"
  >
    <button
      className="MuiButtonBase-root MuiCardActionArea-root makeStyles-actionArea-28"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <img
        alt="Clonazepam 05 mg"
        className="MuiCardMedia-root makeStyles-media-23 MuiCardMedia-media MuiCardMedia-img"
        src="https://www.laboratoriochile.cl/wp-content//uploads/2015/11/Clonazepam_05MG_30C_BE_HD.jpg"
        title="Clonazepam 05 mg"
      />
      <div
        className="MuiCardContent-root makeStyles-content-25"
        onClick={[Function]}
      >
        <h2
          className="MuiTypography-root MuiTypography-h6 MuiTypography-colorTextPrimary MuiTypography-gutterBottom MuiTypography-alignCenter"
        >
          Clonazepam · 2 mg
        </h2>
        <div
          className="MuiBox-root MuiBox-root-36 makeStyles-box-24"
        >
          <div
            className="MuiChip-root MuiChip-sizeSmall"
            onKeyDown={[Function]}
            onKeyUp={[Function]}
          >
            <div
              className="MuiAvatar-root MuiAvatar-circle MuiChip-avatar MuiChip-avatarSmall"
            >
              <img
                alt="Bioequivalente"
                className="MuiAvatar-img"
                src="/static/images/avatar/1.jpg"
              />
            </div>
            <span
              className="MuiChip-label MuiChip-labelSmall"
            >
              BioE
            </span>
          </div>
          <div
            className="MuiChip-root MuiChip-sizeSmall"
            onKeyDown={[Function]}
            onKeyUp={[Function]}
          >
            <div
              className="MuiAvatar-root MuiAvatar-circle MuiChip-avatar MuiChip-avatarSmall"
            >
              <img
                alt="Receta retenida"
                className="MuiAvatar-img"
                src="/static/images/avatar/1.jpg"
              />
            </div>
            <span
              className="MuiChip-label MuiChip-labelSmall"
            >
              Receta retenida
            </span>
          </div>
        </div>
        <p
          className="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-gutterBottom MuiTypography-alignCenter"
        >
          Clonazepam · 2 mg · 30 comprimidos
        </p>
        <div
          className="MuiBox-root MuiBox-root-37"
        >
          <h2
            className="MuiTypography-root MuiTypography-h6 MuiTypography-colorPrimary MuiTypography-alignCenter"
          >
            $ 
            5025
          </h2>
          <h3
            className="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorPrimary MuiTypography-alignCenter"
          >
            $ 168 / comprimido
          </h3>
        </div>
      </div>
      <span
        className="MuiCardActionArea-focusHighlight"
      />
    </button>
    <div
      className="MuiCardActions-root makeStyles-actions-26 MuiCardActions-spacing"
      onClick={[Function]}
    >
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-button-27 MuiButton-containedPrimary"
        disabled={false}
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          Agregar
        </span>
      </button>
    </div>
  </div>
  <div
    className="MuiBox-root MuiBox-root-38 makeStyles-root-22"
  >
    <button
      className="MuiButtonBase-root MuiCardActionArea-root makeStyles-actionArea-28"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <img
        alt="Clonazepam 05 mg"
        className="MuiCardMedia-root makeStyles-media-23 MuiCardMedia-media MuiCardMedia-img"
        src="https://www.laboratoriochile.cl/wp-content//uploads/2015/11/Clonazepam_05MG_30C_BE_HD.jpg"
        title="Clonazepam 05 mg"
      />
      <div
        className="MuiCardContent-root makeStyles-content-25"
        onClick={[Function]}
      >
        <h2
          className="MuiTypography-root MuiTypography-h6 MuiTypography-colorTextPrimary MuiTypography-gutterBottom MuiTypography-alignCenter"
        >
          Clonazepam · 2 mg
        </h2>
        <div
          className="MuiBox-root MuiBox-root-39 makeStyles-box-24"
        >
          <div
            className="MuiChip-root MuiChip-sizeSmall"
            onKeyDown={[Function]}
            onKeyUp={[Function]}
          >
            <div
              className="MuiAvatar-root MuiAvatar-circle MuiChip-avatar MuiChip-avatarSmall"
            >
              <img
                alt="Bioequivalente"
                className="MuiAvatar-img"
                src="/static/images/avatar/1.jpg"
              />
            </div>
            <span
              className="MuiChip-label MuiChip-labelSmall"
            >
              BioE
            </span>
          </div>
          <div
            className="MuiChip-root MuiChip-sizeSmall"
            onKeyDown={[Function]}
            onKeyUp={[Function]}
          >
            <div
              className="MuiAvatar-root MuiAvatar-circle MuiChip-avatar MuiChip-avatarSmall"
            >
              <img
                alt="Receta retenida"
                className="MuiAvatar-img"
                src="/static/images/avatar/1.jpg"
              />
            </div>
            <span
              className="MuiChip-label MuiChip-labelSmall"
            >
              Receta retenida
            </span>
          </div>
        </div>
        <p
          className="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-gutterBottom MuiTypography-alignCenter"
        >
          Clonazepam · 2 mg · 30 comprimidos
        </p>
        <div
          className="MuiBox-root MuiBox-root-40"
        >
          <h2
            className="MuiTypography-root MuiTypography-h6 MuiTypography-colorPrimary MuiTypography-alignCenter"
          >
            $ 
            5025
          </h2>
          <h3
            className="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorPrimary MuiTypography-alignCenter"
          >
            $ 168 / comprimido
          </h3>
        </div>
      </div>
      <span
        className="MuiCardActionArea-focusHighlight"
      />
    </button>
    <div
      className="MuiCardActions-root makeStyles-actions-26 MuiCardActions-spacing"
      onClick={[Function]}
    >
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-button-27 MuiButton-containedPrimary"
        disabled={false}
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          Agregar
        </span>
      </button>
    </div>
  </div>
  <div
    className="MuiBox-root MuiBox-root-41 makeStyles-root-22"
  >
    <button
      className="MuiButtonBase-root MuiCardActionArea-root makeStyles-actionArea-28"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <img
        alt="Clonazepam 05 mg"
        className="MuiCardMedia-root makeStyles-media-23 MuiCardMedia-media MuiCardMedia-img"
        src="https://www.laboratoriochile.cl/wp-content//uploads/2015/11/Clonazepam_05MG_30C_BE_HD.jpg"
        title="Clonazepam 05 mg"
      />
      <div
        className="MuiCardContent-root makeStyles-content-25"
        onClick={[Function]}
      >
        <h2
          className="MuiTypography-root MuiTypography-h6 MuiTypography-colorTextPrimary MuiTypography-gutterBottom MuiTypography-alignCenter"
        >
          Clonazepam · 2 mg
        </h2>
        <div
          className="MuiBox-root MuiBox-root-42 makeStyles-box-24"
        >
          <div
            className="MuiChip-root MuiChip-sizeSmall"
            onKeyDown={[Function]}
            onKeyUp={[Function]}
          >
            <div
              className="MuiAvatar-root MuiAvatar-circle MuiChip-avatar MuiChip-avatarSmall"
            >
              <img
                alt="Bioequivalente"
                className="MuiAvatar-img"
                src="/static/images/avatar/1.jpg"
              />
            </div>
            <span
              className="MuiChip-label MuiChip-labelSmall"
            >
              BioE
            </span>
          </div>
          <div
            className="MuiChip-root MuiChip-sizeSmall"
            onKeyDown={[Function]}
            onKeyUp={[Function]}
          >
            <div
              className="MuiAvatar-root MuiAvatar-circle MuiChip-avatar MuiChip-avatarSmall"
            >
              <img
                alt="Receta retenida"
                className="MuiAvatar-img"
                src="/static/images/avatar/1.jpg"
              />
            </div>
            <span
              className="MuiChip-label MuiChip-labelSmall"
            >
              Receta retenida
            </span>
          </div>
        </div>
        <p
          className="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-gutterBottom MuiTypography-alignCenter"
        >
          Clonazepam · 2 mg · 30 comprimidos
        </p>
        <div
          className="MuiBox-root MuiBox-root-43"
        >
          <h2
            className="MuiTypography-root MuiTypography-h6 MuiTypography-colorPrimary MuiTypography-alignCenter"
          >
            $ 
            5025
          </h2>
          <h3
            className="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorPrimary MuiTypography-alignCenter"
          >
            $ 168 / comprimido
          </h3>
        </div>
      </div>
      <span
        className="MuiCardActionArea-focusHighlight"
      />
    </button>
    <div
      className="MuiCardActions-root makeStyles-actions-26 MuiCardActions-spacing"
      onClick={[Function]}
    >
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-button-27 MuiButton-containedPrimary"
        disabled={false}
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          Agregar
        </span>
      </button>
    </div>
  </div>
  <div
    className="MuiBox-root MuiBox-root-44 makeStyles-root-22"
  >
    <button
      className="MuiButtonBase-root MuiCardActionArea-root makeStyles-actionArea-28"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <img
        alt="Clonazepam 05 mg"
        className="MuiCardMedia-root makeStyles-media-23 MuiCardMedia-media MuiCardMedia-img"
        src="https://www.laboratoriochile.cl/wp-content//uploads/2015/11/Clonazepam_05MG_30C_BE_HD.jpg"
        title="Clonazepam 05 mg"
      />
      <div
        className="MuiCardContent-root makeStyles-content-25"
        onClick={[Function]}
      >
        <h2
          className="MuiTypography-root MuiTypography-h6 MuiTypography-colorTextPrimary MuiTypography-gutterBottom MuiTypography-alignCenter"
        >
          Clonazepam · 2 mg
        </h2>
        <div
          className="MuiBox-root MuiBox-root-45 makeStyles-box-24"
        >
          <div
            className="MuiChip-root MuiChip-sizeSmall"
            onKeyDown={[Function]}
            onKeyUp={[Function]}
          >
            <div
              className="MuiAvatar-root MuiAvatar-circle MuiChip-avatar MuiChip-avatarSmall"
            >
              <img
                alt="Bioequivalente"
                className="MuiAvatar-img"
                src="/static/images/avatar/1.jpg"
              />
            </div>
            <span
              className="MuiChip-label MuiChip-labelSmall"
            >
              BioE
            </span>
          </div>
          <div
            className="MuiChip-root MuiChip-sizeSmall"
            onKeyDown={[Function]}
            onKeyUp={[Function]}
          >
            <div
              className="MuiAvatar-root MuiAvatar-circle MuiChip-avatar MuiChip-avatarSmall"
            >
              <img
                alt="Receta retenida"
                className="MuiAvatar-img"
                src="/static/images/avatar/1.jpg"
              />
            </div>
            <span
              className="MuiChip-label MuiChip-labelSmall"
            >
              Receta retenida
            </span>
          </div>
        </div>
        <p
          className="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-gutterBottom MuiTypography-alignCenter"
        >
          Clonazepam · 2 mg · 30 comprimidos
        </p>
        <div
          className="MuiBox-root MuiBox-root-46"
        >
          <h2
            className="MuiTypography-root MuiTypography-h6 MuiTypography-colorPrimary MuiTypography-alignCenter"
          >
            $ 
            5025
          </h2>
          <h3
            className="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorPrimary MuiTypography-alignCenter"
          >
            $ 168 / comprimido
          </h3>
        </div>
      </div>
      <span
        className="MuiCardActionArea-focusHighlight"
      />
    </button>
    <div
      className="MuiCardActions-root makeStyles-actions-26 MuiCardActions-spacing"
      onClick={[Function]}
    >
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-button-27 MuiButton-containedPrimary"
        disabled={false}
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          Agregar
        </span>
      </button>
    </div>
  </div>
  <div
    className="MuiBox-root MuiBox-root-47 makeStyles-root-22"
  >
    <button
      className="MuiButtonBase-root MuiCardActionArea-root makeStyles-actionArea-28"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <img
        alt="Clonazepam 05 mg"
        className="MuiCardMedia-root makeStyles-media-23 MuiCardMedia-media MuiCardMedia-img"
        src="https://www.laboratoriochile.cl/wp-content//uploads/2015/11/Clonazepam_05MG_30C_BE_HD.jpg"
        title="Clonazepam 05 mg"
      />
      <div
        className="MuiCardContent-root makeStyles-content-25"
        onClick={[Function]}
      >
        <h2
          className="MuiTypography-root MuiTypography-h6 MuiTypography-colorTextPrimary MuiTypography-gutterBottom MuiTypography-alignCenter"
        >
          Clonazepam · 2 mg
        </h2>
        <div
          className="MuiBox-root MuiBox-root-48 makeStyles-box-24"
        >
          <div
            className="MuiChip-root MuiChip-sizeSmall"
            onKeyDown={[Function]}
            onKeyUp={[Function]}
          >
            <div
              className="MuiAvatar-root MuiAvatar-circle MuiChip-avatar MuiChip-avatarSmall"
            >
              <img
                alt="Bioequivalente"
                className="MuiAvatar-img"
                src="/static/images/avatar/1.jpg"
              />
            </div>
            <span
              className="MuiChip-label MuiChip-labelSmall"
            >
              BioE
            </span>
          </div>
          <div
            className="MuiChip-root MuiChip-sizeSmall"
            onKeyDown={[Function]}
            onKeyUp={[Function]}
          >
            <div
              className="MuiAvatar-root MuiAvatar-circle MuiChip-avatar MuiChip-avatarSmall"
            >
              <img
                alt="Receta retenida"
                className="MuiAvatar-img"
                src="/static/images/avatar/1.jpg"
              />
            </div>
            <span
              className="MuiChip-label MuiChip-labelSmall"
            >
              Receta retenida
            </span>
          </div>
        </div>
        <p
          className="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-gutterBottom MuiTypography-alignCenter"
        >
          Clonazepam · 2 mg · 30 comprimidos
        </p>
        <div
          className="MuiBox-root MuiBox-root-49"
        >
          <h2
            className="MuiTypography-root MuiTypography-h6 MuiTypography-colorPrimary MuiTypography-alignCenter"
          >
            $ 
            5025
          </h2>
          <h3
            className="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorPrimary MuiTypography-alignCenter"
          >
            $ 168 / comprimido
          </h3>
        </div>
      </div>
      <span
        className="MuiCardActionArea-focusHighlight"
      />
    </button>
    <div
      className="MuiCardActions-root makeStyles-actions-26 MuiCardActions-spacing"
      onClick={[Function]}
    >
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-button-27 MuiButton-containedPrimary"
        disabled={false}
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          Agregar
        </span>
      </button>
    </div>
  </div>
  <div
    className="MuiBox-root MuiBox-root-50 makeStyles-root-22"
  >
    <button
      className="MuiButtonBase-root MuiCardActionArea-root makeStyles-actionArea-28"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <img
        alt="Clonazepam 05 mg"
        className="MuiCardMedia-root makeStyles-media-23 MuiCardMedia-media MuiCardMedia-img"
        src="https://www.laboratoriochile.cl/wp-content//uploads/2015/11/Clonazepam_05MG_30C_BE_HD.jpg"
        title="Clonazepam 05 mg"
      />
      <div
        className="MuiCardContent-root makeStyles-content-25"
        onClick={[Function]}
      >
        <h2
          className="MuiTypography-root MuiTypography-h6 MuiTypography-colorTextPrimary MuiTypography-gutterBottom MuiTypography-alignCenter"
        >
          Clonazepam · 2 mg
        </h2>
        <div
          className="MuiBox-root MuiBox-root-51 makeStyles-box-24"
        >
          <div
            className="MuiChip-root MuiChip-sizeSmall"
            onKeyDown={[Function]}
            onKeyUp={[Function]}
          >
            <div
              className="MuiAvatar-root MuiAvatar-circle MuiChip-avatar MuiChip-avatarSmall"
            >
              <img
                alt="Bioequivalente"
                className="MuiAvatar-img"
                src="/static/images/avatar/1.jpg"
              />
            </div>
            <span
              className="MuiChip-label MuiChip-labelSmall"
            >
              BioE
            </span>
          </div>
          <div
            className="MuiChip-root MuiChip-sizeSmall"
            onKeyDown={[Function]}
            onKeyUp={[Function]}
          >
            <div
              className="MuiAvatar-root MuiAvatar-circle MuiChip-avatar MuiChip-avatarSmall"
            >
              <img
                alt="Receta retenida"
                className="MuiAvatar-img"
                src="/static/images/avatar/1.jpg"
              />
            </div>
            <span
              className="MuiChip-label MuiChip-labelSmall"
            >
              Receta retenida
            </span>
          </div>
        </div>
        <p
          className="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-gutterBottom MuiTypography-alignCenter"
        >
          Clonazepam · 2 mg · 30 comprimidos
        </p>
        <div
          className="MuiBox-root MuiBox-root-52"
        >
          <h2
            className="MuiTypography-root MuiTypography-h6 MuiTypography-colorPrimary MuiTypography-alignCenter"
          >
            $ 
            5025
          </h2>
          <h3
            className="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorPrimary MuiTypography-alignCenter"
          >
            $ 168 / comprimido
          </h3>
        </div>
      </div>
      <span
        className="MuiCardActionArea-focusHighlight"
      />
    </button>
    <div
      className="MuiCardActions-root makeStyles-actions-26 MuiCardActions-spacing"
      onClick={[Function]}
    >
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-button-27 MuiButton-containedPrimary"
        disabled={false}
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          Agregar
        </span>
      </button>
    </div>
  </div>
  <div
    className="MuiBox-root MuiBox-root-53 makeStyles-root-22"
  >
    <button
      className="MuiButtonBase-root MuiCardActionArea-root makeStyles-actionArea-28"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <img
        alt="Clonazepam 05 mg"
        className="MuiCardMedia-root makeStyles-media-23 MuiCardMedia-media MuiCardMedia-img"
        src="https://www.laboratoriochile.cl/wp-content//uploads/2015/11/Clonazepam_05MG_30C_BE_HD.jpg"
        title="Clonazepam 05 mg"
      />
      <div
        className="MuiCardContent-root makeStyles-content-25"
        onClick={[Function]}
      >
        <h2
          className="MuiTypography-root MuiTypography-h6 MuiTypography-colorTextPrimary MuiTypography-gutterBottom MuiTypography-alignCenter"
        >
          Clonazepam · 2 mg
        </h2>
        <div
          className="MuiBox-root MuiBox-root-54 makeStyles-box-24"
        >
          <div
            className="MuiChip-root MuiChip-sizeSmall"
            onKeyDown={[Function]}
            onKeyUp={[Function]}
          >
            <div
              className="MuiAvatar-root MuiAvatar-circle MuiChip-avatar MuiChip-avatarSmall"
            >
              <img
                alt="Bioequivalente"
                className="MuiAvatar-img"
                src="/static/images/avatar/1.jpg"
              />
            </div>
            <span
              className="MuiChip-label MuiChip-labelSmall"
            >
              BioE
            </span>
          </div>
          <div
            className="MuiChip-root MuiChip-sizeSmall"
            onKeyDown={[Function]}
            onKeyUp={[Function]}
          >
            <div
              className="MuiAvatar-root MuiAvatar-circle MuiChip-avatar MuiChip-avatarSmall"
            >
              <img
                alt="Receta retenida"
                className="MuiAvatar-img"
                src="/static/images/avatar/1.jpg"
              />
            </div>
            <span
              className="MuiChip-label MuiChip-labelSmall"
            >
              Receta retenida
            </span>
          </div>
        </div>
        <p
          className="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-gutterBottom MuiTypography-alignCenter"
        >
          Clonazepam · 2 mg · 30 comprimidos
        </p>
        <div
          className="MuiBox-root MuiBox-root-55"
        >
          <h2
            className="MuiTypography-root MuiTypography-h6 MuiTypography-colorPrimary MuiTypography-alignCenter"
          >
            $ 
            5025
          </h2>
          <h3
            className="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorPrimary MuiTypography-alignCenter"
          >
            $ 168 / comprimido
          </h3>
        </div>
      </div>
      <span
        className="MuiCardActionArea-focusHighlight"
      />
    </button>
    <div
      className="MuiCardActions-root makeStyles-actions-26 MuiCardActions-spacing"
      onClick={[Function]}
    >
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-button-27 MuiButton-containedPrimary"
        disabled={false}
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          Agregar
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Input Base element 1`] = `
<div
  className="MuiFormControl-root MuiTextField-root"
>
  <div
    className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
    onClick={[Function]}
  >
    <input
      aria-invalid={false}
      autoFocus={false}
      className="MuiInputBase-input MuiInput-input"
      disabled={false}
      onAnimationStart={[Function]}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      required={false}
      type="text"
    />
  </div>
</div>
`;

exports[`Storyshots Input Input For Email 1`] = `
<div
  className="MuiFormControl-root MuiTextField-root"
>
  <label
    className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
    data-shrink={false}
  >
    Mail* (800ms)
  </label>
  <div
    className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
    onClick={[Function]}
  >
    <input
      aria-invalid={false}
      autoFocus={false}
      className="MuiInputBase-input MuiInput-input"
      disabled={false}
      onAnimationStart={[Function]}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      required={false}
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`Storyshots Input Input For Phone 1`] = `
<div
  className="MuiFormControl-root makeStyles-formControl-1"
>
  <div
    className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
    onClick={[Function]}
  >
    <div
      aria-haspopup="listbox"
      className="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="button"
      tabIndex={0}
    >
      Chile
       (+
      56
      )
    </div>
    <input
      aria-hidden={true}
      className="MuiSelect-nativeInput"
      onAnimationStart={[Function]}
      onChange={[Function]}
      required={false}
      tabIndex={-1}
      value="Chile"
    />
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root MuiSelect-icon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M7 10l5 5 5-5z"
      />
    </svg>
  </div>
  <div
    className="MuiFormControl-root MuiTextField-root"
  >
    <label
      className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
      data-shrink={false}
    >
      Phone* (800ms)
    </label>
    <div
      className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
      onClick={[Function]}
    >
      <input
        aria-invalid={false}
        autoFocus={false}
        className="MuiInputBase-input MuiInput-input"
        disabled={false}
        onAnimationStart={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        required={false}
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Input Input For Rut 1`] = `
<div
  className="MuiFormControl-root MuiTextField-root"
>
  <label
    className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
    data-shrink={false}
  >
    RUT* (800ms)
  </label>
  <div
    className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
    onClick={[Function]}
  >
    <input
      aria-invalid={false}
      autoFocus={false}
      className="MuiInputBase-input MuiInput-input"
      disabled={false}
      onAnimationStart={[Function]}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      required={false}
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`Storyshots Input Input With Mask 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
    }
  }
>
  <div
    className="MuiFormControl-root MuiTextField-root"
  >
    <label
      className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
      data-shrink={false}
    >
      Maximo 4
    </label>
    <div
      className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
      onClick={[Function]}
    >
      <input
        aria-invalid={false}
        autoFocus={false}
        className="MuiInputBase-input MuiInput-input"
        disabled={false}
        onAnimationStart={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        required={false}
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    className="MuiFormControl-root MuiTextField-root"
  >
    <label
      className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
      data-shrink={false}
    >
      fecha de nacimiento 
    </label>
    <div
      className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
      onClick={[Function]}
    >
      <input
        aria-invalid={false}
        autoFocus={false}
        className="MuiInputBase-input MuiInput-input"
        disabled={false}
        onAnimationStart={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        required={false}
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    className="MuiFormControl-root MuiTextField-root"
  >
    <label
      className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
      data-shrink={false}
    >
      Ingrese RUT (800ms)
    </label>
    <div
      className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
      onClick={[Function]}
    >
      <input
        aria-invalid={false}
        autoFocus={false}
        className="MuiInputBase-input MuiInput-input"
        disabled={false}
        onAnimationStart={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        required={false}
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;
